Finish edit profile screen

--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/public/tuiter/navigation.html">Back</a>
     
+    <h1>Tuiter</h1>
+
+    <h2>Profile</h2>
+    <img src="banner.png" height="200" width="100%">
+    <img src="profile.png" height="48" width="48">
+    <a href="edit-profile.html">Edit profile</a>
+    <h2>WebDev</h2>
+    @WebDev
+
+    <p>
+        Sea and shrimp enthusiast. Used to hate sun and seaweed, but now desperately live for Gimme
+    </p>
+
+    <p>Joined August 2021</p>
+
+    <p><b>123</b> Following <b>234</b> Followers</p>
+
+    <ul>
+        <li><a href="tuits.html">Tuits</a></li>
+        <li><a href="tuits-and-replies.html">Tuits & Replies</a></li>
+        <li><a href="media.html">Media</a></li>
+        <li><a href="likes.html">Likes</a></li>
+    </ul>
 </body>
 </html>
