--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -7,16 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/public/tuiter/profile.html">Back</a>
+    <a href="profile.html">Back</a>
 
     <h1>Tuiter</h1>
     <h2>Edit Profile</h2>
 
-    <a href="/public/tuiter/profile.html">Save</a>
+    <a href="profile.html">Save</a>
     <img src="banner.png" width="100%" height="200">
     <input type="file"> 
     <br>
     <img src="profile.png" width="48" height="48">
+    <br>
     <input type="file">
     <hr>
     <label for="userName">Name</label>
