--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/public/index.html">Back</a>
+    <a href="../../index.html">Back</a>
     <h2>Navigation</h2>
     <ul>
         <li><a href="home.html">Home</a></li>
