--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="public/tuiter/profile.html">Back</a>
+    <a href="profile.html">Back</a>
 
     <h1>Tuiter</h1>
     <h2>Edit Profile</h2>
