--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -12,7 +12,7 @@
     <h1>Tuiter</h1>
     <h2>Edit Profile</h2>
 
-    <a href="/public/tuiter/profile.html">Save</a>
+    <a href="profile.html">Save</a>
     <img src="banner.png" width="100%" height="200">
     <input type="file"> 
     <br>
