--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/public/tuiter/navigation.html">Back</a>
+    <a href="navigation.html">Back</a>
     <h1>Tuiter</h1>
     <h2>Tuit</h2>
     <img src="profile.png" width="48" height="48">
