--- a/public/labs/a2/html/index.html
+++ b/public/labs/a2/html/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Back</a>
     <h1>HTML Examples</h1>
     <h2>Heading Tags</h2>
 <!-- copy paragraph here -->
