--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -2,5 +2,7 @@
 <h1>Assignment 2</h1>
 <ul>
     <li><a href="html/index.html">HTML Exercises</a></li>
+    <li><a href="iframe/index.html">Iframe Exercies</a></li>
+    <li><a href="svg/index.html">SVG Exercies</a></li>
     <!-- add more links to the rest of the exercises later in this assignment -->
 </ul>
