Change svg parameters

--- a/public/labs/a2/svg/index.html
+++ b/public/labs/a2/svg/index.html
@@ -13,7 +13,7 @@
 
     <svg width="300" height="100">
         <rect width="300" height="100"
-          style="fill:rgb(0,0,255); stroke-width:10;
+          style="fill:rgb(0,0,255); stroke-width:20;
               stroke:rgb(0,0,0)" />
     </svg>
       
@@ -21,14 +21,14 @@
 
     <svg width="100" height="100">
       <circle cx="50" cy="50" r="40"
-        stroke="green" stroke-width="4" fill="yellow" />
+        stroke="green" stroke-width="4" fill="green" />
     </svg>
     
     <h2>Drawing polygons</h2>
 
     <svg width="300" height="200">
         <polygon points="100,10 40,198 190,78 10,78 160,198"
-            style="fill:lime; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
+            style="fill:lime; stroke:purple; stroke-width:10; fill-rule:evenodd;" />
     </svg>
 
 </body>
