Finish tuiter-part-B

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -9,11 +9,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="wd-explore-body-background">
 
+<body class="wd-explore-body-background wd-explore-font">
+    
     <input type="text" placeholder="Search Tuiter" class="wd-left-margin wd-search-bar-background wd-rounded-corners-all-around wd-search-bar-font-color wd-border-color wd-search-bar-padding">
     <a href="explore-settings.html" class="wd-explore-setting-float">
         <img src="icons8-settings-24.png" alt="">
     </a>
+
+    <div class="grid-row wd-left-margin">
+        <div class="grid-col">
+            <p class="wd-tab-font-style-highlight wd-tab-border-highlight wd-tab-font-padding">For you</p>
+        </div>
+        <div class="grid-col">
+            <p class="wd-tab-font-style wd-tab-font-padding">Trending</p>
+        </div>
+        <div class="grid-col">
+            <p class="wd-tab-font-style wd-tab-font-padding">Covid-19</p>
+        </div>
+        <div class="grid-col">
+            <p class="wd-tab-font-style wd-tab-font-padding">News</p>
+        </div>
+        <div class="grid-col">
+            <p class="wd-tab-font-style wd-tab-font-padding">Sports</p>
+        </div>
+        <div class="grid-col">
+            <p class="wd-tab-font-style wd-tab-font-padding">Entertainment</p>
+        </div>
+    </div>
+
 </body>
 </html>
