Finish tuiter-part-C

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -17,26 +17,46 @@
         <img src="icons8-settings-24.png" alt="">
     </a>
 
-    <div class="grid-row wd-left-margin">
-        <div class="grid-col">
+    <div class="wd-left-margin">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style-highlight wd-tab-border-highlight wd-tab-font-padding">For you</p>
         </div>
-        <div class="grid-col">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style wd-tab-font-padding">Trending</p>
         </div>
-        <div class="grid-col">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style wd-tab-font-padding">Covid-19</p>
         </div>
-        <div class="grid-col">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style wd-tab-font-padding">News</p>
         </div>
-        <div class="grid-col">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style wd-tab-font-padding">Sports</p>
         </div>
-        <div class="grid-col">
+        <div class="wd-tab-float">
             <p class="wd-tab-font-style wd-tab-font-padding">Entertainment</p>
         </div>
+        <div class="float-done"></div>
     </div>
+
+    <div class="wd-suggested-post wd-left-margin">
+        <p class="wd-post-topic">Trending in Science</p>
+        <p class="wd-post-title">Starship</p>
+        <p class="wd-post-number-of-tweets">55.5K Tweets</p>
+    </div>
+
+    <div class="wd-suggested-post wd-left-margin">
+        <p class="wd-post-topic">Sports ・ Trending</p>
+        <p class="wd-post-title">Joe Rogan</p>
+        <p class="wd-post-number-of-tweets">5,218 Tweets</p>
+    </div>
+
+    <div class="wd-suggested-post wd-left-margin">
+        <p class="wd-post-topic">Trending in United States</p>
+        <p class="wd-post-title">Wonder Bread</p>
+        <p class="wd-post-number-of-tweets">1,259 Tweets</p>
+    </div>
+
 
 </body>
 </html>
