--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -32,5 +32,9 @@
         <li><a href="media.html">Media</a></li>
         <li><a href="likes.html">Likes</a></li>
     </ul>
+
+    <div>
+        
+    </div>
 </body>
 </html>
