Finish tuiter-explore-screen

--- a/public/labs/a3/css/index.html
+++ b/public/labs/a3/css/index.html
@@ -239,19 +239,19 @@ Its position is "Fixed".
 
 <h2>Grid layout</h2>
 <div class="grid-row">
-    <div class="grid-col-half-page bg-color-yellow">
+    <div class="grid-col-half-page">
         <h3>Left half</h3>
     </div>
-    <div class="grid-col-half-page bg-color-blue fg-color-white">
+    <div class="grid-col-half-page">
         <h3>Right half</h3>
     </div>
 </div>
 
 <div class="grid-row">
-    <div class="grid-col-third-page bg-color-green fg-color-white">
+    <div class="grid-col-two-thirds-page bg-color-green fg-color-white">
         <h3>Left third</h3>
     </div>
-    <div class="grid-col-two-thirds-page bg-color-red fg-color-white">
+    <div class="grid-col-third-page bg-color-red fg-color-white">
         <h3>Right two thirds</h3>
     </div>
 </div>
