--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -19,23 +19,41 @@
 
     <div class="wd-left-margin">
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style-highlight wd-tab-border-highlight wd-tab-font-padding">For you</p>
+            <a href="" class="wd-tab-font-style-highlight">
+            <p class="wd-tab-font-padding wd-tab-border-highlight">For you</p>
+        </a>
         </div>
+
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style wd-tab-font-padding">Trending</p>
+            <a selected href="" class="wd-tab-font-style">
+            <p class="wd-tab-font-padding">Trending</p>
+        </a>
         </div>
+
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style wd-tab-font-padding">Covid-19</p>
+            <a selected href="" class="wd-tab-font-style">
+            <p class="wd-tab-font-padding">Covid-19</p>
+        </a>
         </div>
+
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style wd-tab-font-padding">News</p>
+            <a selected href="" class="wd-tab-font-style">
+            <p class="wd-tab-font-padding">News</p>
+        </a>
         </div>
+
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style wd-tab-font-padding">Sports</p>
+            <a selected href="" class="wd-tab-font-style">
+            <p class="wd-tab-font-padding">Sports</p>
+        </a>
         </div>
+
         <div class="wd-tab-float">
-            <p class="wd-tab-font-style wd-tab-font-padding">Entertainment</p>
+            <a selected href="" class="wd-tab-font-style">
+            <p class="wd-tab-font-padding">Entertainment</p>
+        </a>
         </div>
+
         <div class="float-done"></div>
     </div>
 
@@ -51,12 +69,52 @@
         <p class="wd-post-number-of-tweets">5,218 Tweets</p>
     </div>
 
+    <div class="grid-row wd-suggested-post-d  wd-left-margin">
+        <div class="grid-col-two-thirds-page">
+            <p class="wd-post-author">The New York Times 
+                <span class="wd-post-date"> ・ yesterday</span>
+            </p>
+            <p class="wd-post-title">CNN's Cuomo conundrum: A star anchor with a brother in trouble</p>
+        </div>
+        <div class="grid-col-third-page bg-color-red fg-color-white">
+            <img src="new_york_times.png" alt="" class="wd-post-img">
+        </div>
+    </div>
+
+    <div class="grid-row wd-suggested-post-d  wd-left-margin">
+        <div class="grid-col-two-thirds-page">
+            <p class="wd-post-topic">COVID-19
+                <span class="wd-post-date"> ・ LIVE</span>
+            </p>
+            <p class="wd-post-title">
+                COVID-19: News and updates for Massachusetts
+            </p>
+        </div>
+        <div class="grid-col-third-page bg-color-red fg-color-white">
+            <img src="covid19-information-and-updates.jpeg" alt="" class="wd-post-img">
+        </div>
+    </div>
+
+    <div class="grid-row wd-suggested-post-d wd-left-margin">
+        <div class="grid-col-two-thirds-page">
+            <p class="wd-post-author">Bloomberg Opinion 
+                <span class="wd-post-date"> ・ yesterday</span>
+            </p>
+            <p class="wd-post-title">
+                Thinking about getting a booster? Read this first.            </p>
+        </div>
+        <div class="grid-col-third-page bg-color-red fg-color-white">
+            <img src="bloomberg.png" alt="" class="wd-post-img">
+        </div>
+    </div>
+    
+
     <div class="wd-suggested-post wd-left-margin">
         <p class="wd-post-topic">Trending in United States</p>
         <p class="wd-post-title">Wonder Bread</p>
         <p class="wd-post-number-of-tweets">1,259 Tweets</p>
     </div>
 
-
+    
 </body>
 </html>
