--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -17,59 +17,59 @@
         <img src="icons8-settings-24.png" alt="">
     </a>
 
-    <div class="wd-left-margin">
+    <div class="wd-tab">
         <div class="wd-tab-float">
             <a href="" class="wd-tab-font-style-highlight">
-            <p class="wd-tab-font-padding wd-tab-border-highlight">For you</p>
+            <p class="wd-tab-padding wd-tab-border-highlight">For you</p>
         </a>
         </div>
 
         <div class="wd-tab-float">
-            <a selected href="" class="wd-tab-font-style">
-            <p class="wd-tab-font-padding">Trending</p>
+            <a selected href="#" class="wd-tab-font-style">
+            <p class="wd-tab-padding wd-suggested-post-border">Trending</p>
         </a>
         </div>
 
         <div class="wd-tab-float">
-            <a selected href="" class="wd-tab-font-style">
-            <p class="wd-tab-font-padding">Covid-19</p>
+            <a selected href="#" class="wd-tab-font-style">
+            <p class="wd-tab-padding wd-suggested-post-border">Covid-19</p>
         </a>
         </div>
 
         <div class="wd-tab-float">
-            <a selected href="" class="wd-tab-font-style">
-            <p class="wd-tab-font-padding">News</p>
+            <a selected href="#" class="wd-tab-font-style">
+            <p class="wd-tab-padding wd-suggested-post-border">News</p>
         </a>
         </div>
 
         <div class="wd-tab-float">
-            <a selected href="" class="wd-tab-font-style">
-            <p class="wd-tab-font-padding">Sports</p>
+            <a selected href="#" class="wd-tab-font-style">
+            <p class="wd-tab-padding wd-suggested-post-border">Sports</p>
         </a>
         </div>
 
         <div class="wd-tab-float">
-            <a selected href="" class="wd-tab-font-style">
-            <p class="wd-tab-font-padding">Entertainment</p>
+            <a selected href="#" class="wd-tab-font-style">
+            <p class="wd-tab-padding wd-suggested-post-border">Entertainment</p>
         </a>
         </div>
 
         <div class="float-done"></div>
     </div>
 
-    <div class="wd-suggested-post wd-left-margin">
+    <div class="wd-suggested-post-font wd-suggested-post-dimension wd-suggested-post-border wd-left-margin">
         <p class="wd-post-topic">Trending in Science</p>
         <p class="wd-post-title">Starship</p>
         <p class="wd-post-number-of-tweets">55.5K Tweets</p>
     </div>
 
-    <div class="wd-suggested-post wd-left-margin">
+    <div class="wd-suggested-post-font wd-suggested-post-border wd-left-margin">
         <p class="wd-post-topic">Sports ・ Trending</p>
         <p class="wd-post-title">Joe Rogan</p>
         <p class="wd-post-number-of-tweets">5,218 Tweets</p>
     </div>
 
-    <div class="grid-row wd-suggested-post-d  wd-left-margin">
+    <div class="grid-row wd-suggested-post-d wd-suggested-post-font wd-suggested-post-border wd-left-margin">
         <div class="grid-col-two-thirds-page">
             <p class="wd-post-author">The New York Times 
                 <span class="wd-post-date"> ・ yesterday</span>
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div class="grid-row wd-suggested-post-d  wd-left-margin">
+    <div class="grid-row wd-suggested-post-d wd-suggested-post-font wd-suggested-post-border wd-left-margin">
         <div class="grid-col-two-thirds-page">
             <p class="wd-post-topic">COVID-19
                 <span class="wd-post-date"> ・ LIVE</span>
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <div class="grid-row wd-suggested-post-d wd-left-margin">
+    <div class="grid-row wd-suggested-post-d wd-suggested-post-font wd-suggested-post-border wd-left-margin">
         <div class="grid-col-two-thirds-page">
             <p class="wd-post-author">Bloomberg Opinion 
                 <span class="wd-post-date"> ・ yesterday</span>
@@ -109,12 +109,25 @@
     </div>
     
 
-    <div class="wd-suggested-post wd-left-margin">
+    <div class="wd-suggested-post-font wd-suggested-post-border wd-left-margin">
         <p class="wd-post-topic">Trending in United States</p>
         <p class="wd-post-title">Wonder Bread</p>
         <p class="wd-post-number-of-tweets">1,259 Tweets</p>
     </div>
 
+    <div class="grid-row wd-suggested-post-d  wd-suggested-post-font wd-suggested-post-border wd-left-margin">
+        <div class="grid-col-two-thirds-page">
+            <p class="wd-post-topic">Olympics
+                <span class="wd-post-date"> </span>
+            </p>
+            <p class="wd-post-title">
+                Donovan Carrillo, Mexico's first Olympic figure skater in 30 years, takes to the ice at Beijing 2022
+            </p>
+        </div>
+        <div class="grid-col-third-page bg-color-red fg-color-white">
+            <img src="olympics.jpeg" alt="" class="wd-post-img">
+        </div>
+    </div>
     
 </body>
 </html>
