Finish a3-tuiter-bookmark-D

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body class="wd-explore-body-background wd-explore-font">
+<body class="wd-body-background wd-explore-font">
     
     <input type="text" placeholder="Search Tuiter" class="wd-left-margin wd-search-bar-background wd-rounded-corners-all-around wd-search-bar-font-color wd-border-color wd-search-bar-padding">
     <a href="explore-settings.html" class="wd-explore-setting-float">
