--- a/public/labs/index.html
+++ b/public/labs/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="a2/index.html">Assignment 2 Lab</a></li>
         <li><a href="a3/css/index.html">Assignment 3 Lab</a></li>
+        <li><a href="a3/challenge/index.html">Assignment 3 Lab</a></li>
     </ul>
 </body>
 </html>
