Fix relative position error

--- a/public/labs/a3/css/index.html
+++ b/public/labs/a3/css/index.html
@@ -180,7 +180,7 @@ Portrait</div>
 </div>
 
 <h3>Absolute position</h3>
-<div class="pos-relative">
+<div class="pos-relative min-height-150">
     <div class="pos-absolute-10-10 bg-color-yellow dimension-portrait">
         Portrait
     </div>
@@ -191,15 +191,6 @@ Portrait</div>
         Square
     </div>
 </div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
 <h3>Fixed position</h3>
