--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div id="navigation"></div>
       <h1>Web Dev Assignments</h1>
       <ul>
-          <li><a href="labs/index.html">Labs</a></li>
+          <li><a href="labs/index.html">Labs and Challenges</a></li>
           <li><a href="tuiter/navigation.html">Tuiter</a></li>
       </ul>
     
