--- a/public/labs/index.html
+++ b/public/labs/index.html
@@ -14,6 +14,8 @@
         <li><a href="a2/index.html">Assignment 2 Lab</a></li>
         <li><a href="a3/css/index.html">Assignment 3 Lab</a></li>
         <li><a href="a3/challenge/index.html">Assignment 3 Challenge</a></li>
+        <li><a href="a4/bootstrap/index.html">Assignment 4 Lab</a></li>
+
     </ul>
 </body>
 </html>
