--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../vendors/css/bootstrap.min.css" rel="stylesheet"/>
-
+    <link rel="stylesheet" href="../../../vendors/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
+
+    <a href="../../index.html">Back</a>
+
     <div class="container">
         <h1>Bootstrap</h1>
         <p>Welcome to Bootstrap!</p>
-        
+
+    </div>
+
+    <div class="row">
+        <div class="col bg-color-red">
+            <h3>Left half</h3>
+        </div>
+
+        <div class="col bg-color-blue fg-color-white">
+            <h3>
+                Right half
+            </h3>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-4 bg-color-yellow">
+            <h3>One thirds</h3>
+        </div>
+
+        <div class="col-8 bg-color-red">
+            <h3>Two Thirds</h3>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2 bg-color-blue fg-color-white">
+            <h3>Sidebar</h3>
+        </div>
+
+        <div class="col-8 bg-color-yellow">
+            <h3>Main content</h3>
+        </div>
+
+        <div class="col-2 bg-color-red">
+            <h3>Sidebar</h3>
+        </div>
     </div>
 
 </body>
