--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -54,5 +54,80 @@
         </div>
     </div>
 
+    <br>
+    <h2>Responsive grid system</h2>
+    <div class="row">
+        <div class="col-12 col-md-6 col-xl-3">
+            <h3>Column A</h3>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-3">
+            <h3>Column B</h3>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-3">
+            <h3>Column C</h3>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-3">
+            <h3>Column D</h3>
+        </div>
+
+    </div>
+
+    <br>
+
+    <h2>Responsive grid system</h2>
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>1</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>2</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>3</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>4</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>5</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>6</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>7</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>8</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>9</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>10</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>11</h4>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+            <h4>12</h4>
+        </div>
+
+    </div>
+
 </body>
 </html>
