Finish labs-tables

--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -16,118 +16,162 @@
         <h1>Bootstrap</h1>
         <p>Welcome to Bootstrap!</p>
 
+        <div class="row">
+            <div class="col bg-color-red">
+                <h3>Left half</h3>
+            </div>
+
+            <div class="col bg-color-blue fg-color-white">
+                <h3>
+                    Right half
+                </h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-4 bg-color-yellow">
+                <h3>One thirds</h3>
+            </div>
+
+            <div class="col-8 bg-color-red">
+                <h3>Two Thirds</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 bg-color-blue fg-color-white">
+                <h3>Sidebar</h3>
+            </div>
+
+            <div class="col-8 bg-color-yellow">
+                <h3>Main content</h3>
+            </div>
+
+            <div class="col-2 bg-color-red">
+                <h3>Sidebar</h3>
+            </div>
+        </div>
+
+        <br>
+        <h2>Responsive grid system</h2>
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3">
+                <h3>Column A</h3>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-3">
+                <h3>Column B</h3>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-3">
+                <h3>Column C</h3>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-3">
+                <h3>Column D</h3>
+            </div>
+
+        </div>
+
+        <br>
+
+        <h2>Responsive grid system</h2>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>1</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>2</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>3</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>4</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>5</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>6</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>7</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>8</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>9</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>10</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>11</h4>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
+                <h4>12</h4>
+            </div>
+        </div>
+
+        <br>
+
+        <h2>Tables</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Quiz</th>
+                    <th>Topic</th>
+                    <th>Date</th>
+                    <th>Grade</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Q1</td>
+                    <td>HTML</td>
+                    <td>2/3/21</td>
+                    <td>85</td>
+                </tr>
+
+                <tr>
+                    <td>Q2</td>
+                    <td>CSS</td>
+                    <td>2/10/21</td>
+                    <td>90</td>
+                </tr>
+
+                <tr>
+                    <td>Q3</td>
+                    <td>JavaScript</td>
+                    <td>2/17/21</td>
+                    <td>90</td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td colspan="3">Average</td>
+                    <td>90</td>
+                </tr>
+            </tfoot>
+
+        </table>
+
+
     </div>
-
-    <div class="row">
-        <div class="col bg-color-red">
-            <h3>Left half</h3>
-        </div>
-
-        <div class="col bg-color-blue fg-color-white">
-            <h3>
-                Right half
-            </h3>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-4 bg-color-yellow">
-            <h3>One thirds</h3>
-        </div>
-
-        <div class="col-8 bg-color-red">
-            <h3>Two Thirds</h3>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-2 bg-color-blue fg-color-white">
-            <h3>Sidebar</h3>
-        </div>
-
-        <div class="col-8 bg-color-yellow">
-            <h3>Main content</h3>
-        </div>
-
-        <div class="col-2 bg-color-red">
-            <h3>Sidebar</h3>
-        </div>
-    </div>
-
-    <br>
-    <h2>Responsive grid system</h2>
-    <div class="row">
-        <div class="col-12 col-md-6 col-xl-3">
-            <h3>Column A</h3>
-        </div>
-
-        <div class="col-12 col-md-6 col-xl-3">
-            <h3>Column B</h3>
-        </div>
-
-        <div class="col-12 col-md-6 col-xl-3">
-            <h3>Column C</h3>
-        </div>
-
-        <div class="col-12 col-md-6 col-xl-3">
-            <h3>Column D</h3>
-        </div>
-
-    </div>
-
-    <br>
-
-    <h2>Responsive grid system</h2>
-    <div class="row">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>1</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>2</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>3</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>4</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>5</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>6</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>7</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>8</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>9</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>10</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>11</h4>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1">
-            <h4>12</h4>
-        </div>
-
-    </div>
-
 </body>
 </html>
