--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -171,6 +171,27 @@
 
         </table>
 
+        <h2>Responsive Table</h2>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Very</th><th>long</th><th>set</th><th>of</th><th>columns</th>
+                        <th>Very</th><th>long</th><th>set</th><th>of</th><th>columns</th>
+                        <th>Very</th><th>long</th><th>set</th><th>of</th><th>columns</th>            
+                    </tr>
+                </thead>
+           
+                <tbody>
+                    <tr>
+                        <td>Very</td><td>long</td><td>set</td><td>of</td><td>columns</td>
+                        <td>Very</td><td>long</td><td>set</td><td>of</td><td>columns</td>
+                        <td>Very</td><td>long</td><td>set</td><td>of</td><td>columns</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
 
     </div>
 </body>
