Finish labs-lists

--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -16,6 +16,12 @@
         <h1>Bootstrap</h1>
         <p>Welcome to Bootstrap!</p>
 
+        <a href="https://getbootstrap.com/docs/5.1/layout/grid/">
+            <h2>
+                Grid System
+            </h2>
+        </a>
+
         <div class="row">
             <div class="col bg-color-red">
                 <h3>Left half</h3>
@@ -53,7 +59,15 @@
         </div>
 
         <br>
-        <h2>Responsive grid system</h2>
+
+
+        <a href="https://getbootstrap.com/docs/5.1/content/tables/#responsive-tables/">
+            <h2>
+            Responsive tables
+            </h2>
+        </a>
+
+
         <div class="row">
             <div class="col-12 col-md-6 col-xl-3">
                 <h3>Column A</h3>
@@ -171,8 +185,12 @@
 
         </table>
 
-        <h2>Responsive Table</h2>
-        <div class="table-responsive">
+        <h2>
+        <a href="https://getbootstrap.com/docs/5.1/content/tables/#responsive-tables">
+            Responsive tables
+        </a>
+        </h2>
+            <div class="table-responsive">
             <table class="table">
                 <thead>
                     <tr>
@@ -192,6 +210,35 @@
             </table>
         </div>
 
+        <br>
+        <h2>
+            <a href="https://getbootstrap.com/docs/5.1/components/list-group/">
+                Favorite movies
+            </a>
+        </h2>
+
+        <ul class="list-group">
+            <li class="list-group-item active">
+                Aliens
+            </li>
+
+            <li class="list-group-item">
+                Terminator
+            </li>
+
+            <li class="list-group-item">
+                Blade Runnder
+            </li>
+
+            <li class="list-group-item">
+                Lord of the Rings
+            </li>
+
+            <li class="list-group-item disabled">
+                Star Wars
+            </li>
+        </ul>
+        
 
     </div>
 </body>
