Finish labs-responsive-forms

--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -344,6 +344,52 @@
         <label for="range1" class="form-label">Example range</label>        
         <input type="range" class="form-range" min="0" max="5" step="0.5" id="range1">
 
+
+        <br>
+
+        <h3><a href="https://getbootstrap.com/docs/5.1/forms/input-group/">Addons</a></h3>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">$</span>
+            <span class="input-group-text">0.00</span>
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="input-group">
+            <input type="text" class="form-control">
+            <span class="input-group-text">$</span>
+            <span class="input-group-text">0.00</span>
+        </div>
+
+        <br>
+
+        <h3><a href="https://getbootstrap.com/docs/5.1/forms/layout/#horizontal-form">Responsive forms</a></h3>
+        <div class="mb-3 row">
+            <label for="email1" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="email1" value="email@example.com">
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label for="password1" class="col-sm-2 col-form-label">
+                Password
+            </label>
+            
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="password1">
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label for="textarea1" class="col-sm-2 col-form-label">Bio</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" id="textarea1" rows="3"></textarea>
+            </div>
+        </div>
+
+        </div>
+        
     </div>
 
 </body>
