--- a/public/labs/index.html
+++ b/public/labs/index.html
@@ -15,6 +15,8 @@
         <li><a href="a3/css/index.html">Assignment 3 Lab</a></li>
         <li><a href="a3/challenge/index.html">Assignment 3 Challenge</a></li>
         <li><a href="a4/bootstrap/index.html">Assignment 4 Lab</a></li>
+        <li><a href="../tuiter/tuiter-explore-challenge.html">Assignmnet 4 Challenge</a></li>
+        <li><a href="a5/js/index.html">Assignment 5 Lab</a></li>
     </ul>
 </body>
 </html>
