Add embedding javascript

--- a/public/labs/a5/js/index.html
+++ b/public/labs/a5/js/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Embedded script tag</h2>
+
+    <!-- <script>
+        alert("hello world!");
+    </script> -->
+
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
