--- a/public/labs/a5/js/index.html
+++ b/public/labs/a5/js/index.html
@@ -13,6 +13,6 @@
         alert("hello world!");
     </script> -->
 
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
