Add todos link to lab page

--- a/public/labs/a5/js/index.html
+++ b/public/labs/a5/js/index.html
@@ -142,6 +142,11 @@
         Show
     </button>
     
+    <br>
+    <br>
+    <br>
+
+    <a href="./todos/index.html">Assignment 5 TodoList</a>
 
 </body>
 </html>
