--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
     <div id="root"></div>
 
 
-    <div id="navigation"></div>
+    <!-- <div id="navigation"></div>
       <h1>Web Dev Assignments</h1>
       <ul>
           <li><a href="labs/index.html">Labs and Challenges</a></li>
           <li><a href="tuiter/navigation.html">Tuiter</a></li>
-      </ul>
+      </ul> -->
     
   </body>
 </html>
