Finish a7-challeng-profileScrenn

--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -22,7 +22,7 @@
     <hr>
     <label for="userName">Name</label>
     <br>
-    <input id="userNAme" type="text" value="WebDev" placeholder="Name">
+    <input id="userName" type="text" value="WebDev" placeholder="Name">
     <br>
     <hr>
     <label for="userBio">Bio</label>
